updated CheckNflScoresTask to use nfl.com AJAX url